Session 12: Outbox implementation part 2